syntax = "proto3";

// AI 提示：项目的主 Service 定义。
package api.demo;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "demo/foo.proto";
import "demo/bar.proto";

// AI 提示：在复制时，请修改路径和包名为你的业务名。
option go_package = "store/api/demo;demopb";

/**
FooService 定义了业务逻辑接口。
AI 提示：使用 Foo/Bar 作为示例名，一眼就能看懂是模板。
 */
service FooService {

  // CreateFoo: 创建一个新的记录。
  rpc CreateFoo(CreateFooRequest) returns (Foo) {
    option (google.api.http) = {
      // AI 提示：在复制时，路径命名为 /api/{service_name_short}/资源名
      // foo -> fo
      post: "/api/fo/foos"
      body: "*"
    };
  }

  // GetFoo: 获取详情。
  rpc GetFoo(GetFooRequest) returns (Foo) {
    option (google.api.http) = {
      get: "/api/fo/foos/{id}"
    };
  }

  // UpdateFoo: 修改记录。
  rpc UpdateFoo(UpdateFooRequest) returns (Foo) {
    option (google.api.http) = {
      patch: "/api/fo/foos/{id}"
      body: "*"
    };
  }

  // DeleteFoo: 删除记录。
  rpc DeleteFoo(DeleteFooRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/fo/foos/{id}"
    };
  }

  // ListFoos: 获取列表。
  rpc ListFoos(ListFoosRequest) returns (FooList) {
    option (google.api.http) = {
      get: "/api/fo/foos"
    };
  }
}

// --- Request/Response 相关的 Message 放在 Service 文件中 ---

message CreateFooRequest {
  string name = 1;
  string avatar = 2;
  string desc = 3;
}

message GetFooRequest {
  string id = 1;
}

message UpdateFooRequest {
  string id = 1;
  string name = 2;
  string avatar = 3;
  string desc = 4;
}

message DeleteFooRequest {
  string id = 1;
}

message ListFoosRequest {
  int64 page = 1;
  int64 size = 2;
  string keyword = 3;
}

message FooList {
  repeated Foo list = 1;
  int64 total = 2;
  int64 page = 3;
  int64 size = 4;
}
